test/resources/parser/failing/zomtest1.scala
object MultipleQualifiers {
  Module1.Module2.func()
}